--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.2.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
